# MediaServer-

./: .clang_complete  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/: CMakeLists.txt
dep/crossguid/: CMakeLists.txt
dep/pire/: CMakeLists.txt  config.h.cmake
dep/pire/cmake/: test_alignas.cpp  test_aligned.cpp  test_inline.c  test_lambdas.cpp  test_scoped_expr.cpp
dep/pire/pire/: CMakeLists.txt  re_parser.h
dep/pire/pkg/: Makefile.win32
dep/platinum/: CMakeLists.txt
dep/platinum/Neptune/Documents/Manuals/: Neptune Logging.doc
dep/platinum/Platinum/Docs/Doxygen/html/com.plutinosoft.platinum.docset/Contents/Resources/: docSet.dsidx  docSet.skidx  docSet.toc
dep/platinum/Platinum/Source/Apps/MediaCrawler/: main.cpp
dep/platinum/Platinum/Targets/universal-apple-macosx/Release/Platinum.framework/Versions/A/: Platinum
dep/threadpool11/: CMakeLists.txt
dep/threadpool11/threadpool11/src/: pool.cpp
examples/documents/: Thumbs.db  UPnPFAQ_11_25_2014.doc
examples/sampledevice_and_servicetemplates/: Audio-1-2001Feb.doc  CDPlayer-1-2001Feb.doc  ChangeDisc-1.doc  PlayCD-1 -2001Feb.doc
examples/standardizeddcps/Internet Gateway_2/: Thumbs.db
resources/: CMakeLists.txt
resources/proto/: Renderer.proto
resources/renderers/: Default.conf  Panasonic-VieraS60.conf  Panasonic-VieraS60.prototxt  UMS.conf  UMS.prototxt
src/: CMakeLists.txt
src/Main/: main.cpp
src/Network/: requests.cpp  requests.hpp  upnp.cpp  upnp.hpp
src/Renderers/: manager.cpp  manager.hpp
src/Server/: Server.cpp  mediaserver.cpp  mediaserver.hpp
src/Utils/: utils.cpp  utils.hpp
